# fintech-integration-lab

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  models.py
app/webhooks/: provider.py  stripe.py
data/: app.db
docs/: proof_idempotency.md  stripe-cli.md
scripts/: README.md  demo_send_webhook.py  stripe_cli_diagnose.ps1
tests/: test_stripe_webhook.py
